--- a/src/pages/cart.css
+++ b/src/pages/cart.css
@@ -224,14 +224,14 @@
     text-align: center;
     font-size: 1.5vh;
     position: relative;
-    top: 7%;
+    top: 5%;
 }
 
 .payment_amount_title{
     text-align: center;
     margin-bottom: 5px;
     position: relative;
-    top: 7%;
+    top: 5%;
 }
 
 .payment_amount_1{
@@ -280,14 +280,14 @@
     height: 18%;
     font-size: 1.5vh;
     position: relative;
-    top: 10%;
+    top: 7%;
 }
 
 .payment_method_title{
     text-align: center;
     margin-bottom: 5px;
     position: relative;
-    top: 10%;
+    top: 7%;
 }
 
 .payment_method_list{
@@ -350,4 +350,15 @@
 
 .purchase_btn:hover{
     cursor: pointer;
+}
+
+.cartPayAgree{
+    position: absolute;
+    bottom: 10vh;
+    left: 8.7vw;
+    font-size: 1.6vh;
+}
+
+.cartPayAgree input{
+    accent-color: gray;
 }
