--- a/src/pages/standard/standard2.css
+++ b/src/pages/standard/standard2.css
@@ -28,6 +28,7 @@
     border-radius: 10px;
     white-space: nowrap;
     font-size: 30px;
+    font-weight: bold;
 }
 
 .standard2_Info_name {
@@ -245,12 +246,12 @@
 }
 
 .standard2_buyIcon{
-    width: 20px;
+    width: 25px;
     height: 23px;
 }
 
 .standard2_basketIcon{
-    width: 20px;
+    width: 25px;
     height: 23px;
 }
 .standard2_BuyBtn:hover{
