--- a/src/pages/open/open_page7.css
+++ b/src/pages/open/open_page7.css
@@ -1,6 +1,6 @@
 .item {
   width: 15vw;
-  height: 15vh;
+  height: 30vh;
   background-position: center;
   background-size: 35vh;
   margin: 1vw;
@@ -14,6 +14,8 @@
     white-space: nowrap;
     overflow: hidden;
   }
+
+.page7_name{ font-size: 1.2em; transform: translateY(-2.8em);  color:gray; font-weight: 700;}
 
 .page7_step1{font-weight: 700; color:white; font-size: 5em;margin-top: 3em;}
 .page7_step1_text{font-weight: 700; color:white; font-size: 2em;
