--- a/src/components/mystory.css
+++ b/src/components/mystory.css
@@ -233,6 +233,11 @@
 .checkProd{
     width: 1.5vw;
     height: 3.5vh;
+    margin-bottom: 0
+}
+
+.purchaseConfirm_txt{
+    margin-bottom: 1vh;
 }
 
 .purchaseConfirmList{
@@ -442,17 +447,17 @@
 }
 
 .salesInfo_1{
-    margin-bottom: 0.5vh;
+    margin-bottom: 1vh;
 }
 
 .salesInfo_3{
-    margin-bottom: 0.5vh;
+    margin-bottom: 1vh;
 }
 
 .purchaseInfo_1{
-    margin-bottom: 0.5vh;
+    margin-bottom: 1vh;
 }
 
 .purchaseInfo_3{
-    margin-bottom: 0.5vh;
+    margin-bottom: 1vh;
 }
