--- a/src/pages/open/open_page7.css
+++ b/src/pages/open/open_page7.css
@@ -22,7 +22,9 @@
           text-align: center;}
 .page7_step1_text2{margin-top: 1em; font-weight: 400; color:white; font-size: 1.5em;
           text-align:center;}
-.page7_last_text{margin-top: 10em; font-weight: 200; color:white; font-size: 2em;
+.page7_last_text{margin-top: 15em; font-weight: 200; background: linear-gradient(to top, #494949, #ffffff);
+  color: transparent;
+  -webkit-background-clip: text; font-size: 1.5em;
           text-align:center; height: 70vh; font-family: 'Noto Serif KR'}
 
 #page7_h3{margin-top: 1.5em; font-size: 1.3em;}
